syntax = "proto3";
option java_package = "dev.veryniche.stitchcounter.storage.models";
option java_multiple_files = true;


message Projects {
  repeated Game games = 1;
}

message Game {
  int32 position = 1;
  double seed = 2;
  double lastModified = 3;
  string gameType = 4;
  int32 stackSize = 5;
}